Small fix colimn control slots css. Make it non scrollable, because othervise onMouseOver shadow image appeared (Q/clickable) and scrollbar appear.

--- a/platform/plugins/Q/web/css/columns.css
+++ b/platform/plugins/Q/web/css/columns.css
@@ -167,6 +167,7 @@ html.Q_ios.Q_standalone .Q_columns_title {
 
 .Q_columns_column.Q_columns_hasControls .Q_controls_slot {
 	display: block;
+	overflow: hidden;
 }
 
 .Q_columns_loading .Q_controls_slot { display: none; }
